--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -1,10 +1,10 @@
 body {
 	/*background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed;*/
-	/*background: url("back1.jpg") no-repeat center center fixed;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+  padding-top : 70px;
 } 
 .padding-left {
 	padding-left : 5%;
@@ -42,4 +42,4 @@ body {
 	display: block;
     text-align: center;
     width: 100%; 
-}
+}   
