--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -46,3 +46,51 @@ body {
 .padT {
 	padding-top : 30px;
 }
+.admin .header-img {
+	width: fit-content;
+	margin: 0 5px 10px 0;
+}
+.admin .vehicle {
+	display: flex;
+}
+.admin .vehicle .header-img .header {
+	display: flex;
+    justify-content: flex-end;
+    background-color: rgba(0,0,0,.03);
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    padding-left: 5px;
+    height: 30px;
+}
+.admin .header-img img {
+	width: 100%;
+}
+.admin .header-img .header form {
+	margin-bottom: 0;
+}
+.admin .vehicle > form {
+	display: flex;
+	flex-direction: column;
+}
+.admin .vehicle > form > div:first-child {
+	display: flex;
+	margin-top: 30px;
+}
+.admin .vehicle .table {
+	margin-top: 5px;
+	display: table;
+	border-spacing: 5px;
+}
+.admin .vehicle .table:not(:last-child) {
+	margin-right: 10px;
+}
+.admin .vehicle .table > .row {
+	display: table-row;
+}
+.admin .vehicle .table .row > * {
+	display: table-cell;
+}
+.admin .vehicle .save-btn {
+	display: flex;
+	justify-content: flex-end;
+}
