--- a/src/main/resources/email_style.css
+++ b/src/main/resources/email_style.css
@@ -1,3 +1,20 @@
 .confirmation-email {
 	
 }
+.confirmation-email .header-info {
+	display: flex;
+	justify-content: space-between;
+}
+.confirmation-email .header-info > .confirmation-number {
+	text-align: right;
+    width: calc(100% - 400px);
+    margin: auto 0;
+}
+.confirmation-email .header-info > .confirmation-number > .title {
+	font-size: 16px;
+}
+.confirmation-email .header-info > .confirmation-number > .number {
+	font-weight: bold;
+	font-size: 14px;
+	margin-right: 45px;
+}
